--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "tailwindcss": "^3.3.2",
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.29",
+    "@types/node": "24.9.2",
+    "@types/react": "19.2.2",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.18",
     "typescript": "^5.1.3"
   }
 }
