--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "tailwindcss": "^3.3.2",
+    "@types/node": "^24.9.2",
+    "@types/react": "^19.2.2",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.29",
+    "tailwindcss": "^3.3.2",
     "typescript": "^5.1.3"
   }
 }
