--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.78.0",
+    "lucide-react": "^0.548.0",
     "next": "14.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0"
