--- a/package.json
+++ b/package.json
@@ -8,11 +8,17 @@
     "start": "next start"
   },
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-select": "^2.2.6",
     "@supabase/supabase-js": "^2.78.0",
+    "date-fns": "^4.1.0",
+    "dayjs": "^1.11.19",
+    "framer-motion": "^12.23.24",
     "lucide-react": "^0.548.0",
     "next": "14.1.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@types/node": "^24.9.2",
