--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "lucide-react": "^0.548.0",
     "next": "14.1.2",
     "react": "18.2.0",
+    "react-canada-map": "^1.0.2",
     "react-dom": "18.2.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "recharts": "^3.3.0"
   },
   "devDependencies": {
     "@types/node": "^24.9.2",
