--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-canada-map": "^1.0.2",
     "react-dom": "18.2.0",
     "react-icons": "^5.5.0",
-    "recharts": "^3.3.0"
+    "recharts": "^3.3.0",
+    "sharp": "^0.34.4"
   },
   "devDependencies": {
     "@types/node": "^24.9.2",
