--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-select": "^2.2.6",
+    "@stripe/react-stripe-js": "^5.3.0",
+    "@stripe/stripe-js": "^8.3.0",
     "@supabase/supabase-js": "^2.78.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
@@ -22,7 +24,8 @@
     "react-dom": "18.2.0",
     "react-icons": "^5.5.0",
     "recharts": "^3.3.0",
-    "sharp": "^0.34.4"
+    "sharp": "^0.34.4",
+    "stripe": "^19.2.0"
   },
   "devDependencies": {
     "@types/node": "^24.9.2",
