--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-icons": "^5.5.0",
     "recharts": "^3.3.0",
     "sharp": "^0.34.4",
-    "stripe": "^19.2.0"
+    "stripe": "^19.2.0",
+    "swiper": "^12.0.3"
   },
   "devDependencies": {
     "@types/node": "^24.9.2",
