--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.19",
     "framer-motion": "^12.23.24",
+    "gsap": "^3.14.2",
     "lucide-react": "^0.548.0",
     "next": "14.1.2",
     "react": "18.2.0",
     "react-canada-map": "^1.0.2",
     "react-dom": "18.2.0",
+    "react-globe.gl": "^2.37.0",
     "react-icons": "^5.5.0",
     "recharts": "^3.3.0",
     "sharp": "^0.34.4",
