--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gsap": "^3.14.2",
     "lucide-react": "^0.548.0",
     "next": "14.1.2",
+    "next-themes": "^0.4.6",
     "react": "18.2.0",
     "react-canada-map": "^1.0.2",
     "react-dom": "18.2.0",
